Fixed generate keys on mobile

--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -60,6 +60,9 @@ html {
       line-height: 0;
       height: auto;
     }
+    .navbar-quick-nav  .navbar-brand {
+      margin-right: 0;
+    }
   }
 
   .navbar-menu {
